[package]
name = "manga-crawler"
version = "0.1.0"
authors = ["Benoit Lemoine <blemoine@mnubo.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
chrono = {version = "0.4", features = ["serde"] }
pretty_assertions = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9"
failure = "0.1.3"
